SourceOrg/src/objects/Interaction__c.object
<CustomObject>
    <description>Object to capture Interactions from the source systems including, interactive events(sessions/seminars/classes) and one-way communication (job posting, contact report) etc.</description>
    <fields>
        <fullName>Abandon_Date__c</fullName>
        <label>Abandon Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Academic_Concentration__c</fullName>
        <description>Academic Concentration For Job/Internship/Job Posting</description>
        <inlineHelpText>Academic Concentration For Job/Internship/Job Posting</inlineHelpText>
        <label>Academic Concentration</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Engagements (Account)</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Due_Date__c</fullName>
        <description>Due Date of an Activity</description>
        <inlineHelpText>Due Date of an Activity</inlineHelpText>
        <label>Activity Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Track_Code__c</fullName>
        <label>Agreement Track Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <description>Agreement Type For KUCTC Agreement Data From Sophia</description>
        <inlineHelpText>Agreement Type For KUCTC Agreement Data From Sophia</inlineHelpText>
        <label>Agreement Type</label>
        <picklist>
            <controllingField>Interaction_Type__c</controllingField>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment - Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capstone Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential Disclosure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential Disclosure - Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Sponsored Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Sponsored Research - Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License - Exclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License - Exclusive - Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License - Mixed Exclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License - Mixed Exclusive - Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License - Non-Exclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License - Non-Exclusive - Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Service - Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material Transfer - Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material Transfer - Inbound - Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material Transfer - Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material Transfer - Outbound - Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memorandum of Understanding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memorandum of Understanding - Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option - Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Amendment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount for Grant &quot;Posted Budget Amount&quot;, Endowment &quot;UNIT_GIFT_TOTAL&quot;, Capstone &quot;$ For Project&quot;, Key IT Vendor &quot;$ of IT spend&quot;, Service Agreement &quot;Amount&quot;</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User the Task or Event is assigned to</description>
        <inlineHelpText>User the Task or Event is assigned to</inlineHelpText>
        <label>Assigned To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capstone_Project_Department__c</fullName>
        <description>Department Implementing The Capstone Project</description>
        <formula>KU_Contact__r.Department</formula>
        <inlineHelpText>Department Implementing The Capstone Project</inlineHelpText>
        <label>Capstone Project Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>When is the Graduation/Internship/Job</description>
        <inlineHelpText>When is the Graduation/Internship/Job</inlineHelpText>
        <label>Term/Semester/Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Fall 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Engineering B.S. Class of 2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Engineering B.S. Class of 2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Engineering B.S. Class of 2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Engineering B.S. Class of 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Engineering B.S. Class of 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Engineering B.S. Class of 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Engineering B.S. Class of 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Engineering B.S. Class of 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Engineering B.S. Class of 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006-2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007-2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008-2009</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Primary Contact for this Interaction. The Contact&apos;s Master Organization must match the Engagement&apos;s Master Organization.</description>
        <inlineHelpText>Primary Contact for this Interaction. The Contact&apos;s Master Organization must match the Engagement&apos;s Master Organization.</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>External_Contacts</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Engagements (Contact)</relationshipLabel>
        <relationshipName>Related_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Savings__c</fullName>
        <description>$ Of Cost Savings From IT Engagement</description>
        <inlineHelpText>$ Of Cost Savings From IT Engagement</inlineHelpText>
        <label>$ Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <description>Job/Internship Count OR Count Of Attendees In a Continuing Ed Event</description>
        <inlineHelpText>Job/Internship Count OR Count Of Attendees In a Continuing Ed Event</inlineHelpText>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_of_Filing__c</fullName>
        <label>Country of Filing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>Date Of Creation In Source System</description>
        <inlineHelpText>Date Of Creation In Source System</inlineHelpText>
        <label>Source System Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dashboard_Category__c</fullName>
        <formula>CASE( Interaction_Type__c ,
     &quot;Agreement&quot;, 
     CASE( Agreement_Type__c,
          &quot;Confidential Disclosure&quot;, &quot;CDAs&quot;,
          &quot;Confidential Disclosure - Amendment&quot;, &quot;CDAs&quot;,
          &quot;Capstone Sponsor&quot;, &quot;Capstone&quot;,
          &quot;License - Exclusive&quot;, &quot;Licensing&quot;,
          &quot;License - Exclusive - Amendment&quot;, &quot;Licensing&quot;,
          &quot;License - Mixed Exclusive&quot;, &quot;Licensing&quot;,
          &quot;License - Mixed Exclusive - Amendment&quot;, &quot;Licensing&quot;,
          &quot;License - Non-Exclusive&quot;, &quot;Licensing&quot;,
          &quot;License - Non-Exclusive - Amendment&quot;, &quot;Licensing&quot;,
          &quot;Material Transfer - Inbound&quot;, &quot;MTAs&quot;,
          &quot;Material Transfer - Inbound - Amendment&quot;, &quot;MTAs&quot;,
          &quot;Material Transfer - Outbound&quot;, &quot;MTAs&quot;,
          &quot;Material Transfer - Outbound - Amendment&quot;, &quot;MTAs&quot;,
          &quot;Research Affiliate&quot;, &quot;Research Affiliate&quot;,
          &quot;Research Affiliate - Amendment&quot;, &quot;Research Affiliate&quot;,
          &quot;&quot;
     ),
     &quot;Engagement - Company Onsite Visit&quot;, &quot;Visits&quot;,
     &quot;Engagment - Key Executive Visit&quot;, &quot;Visits&quot;,
     &quot;Engagement - KU Visit&quot;, &quot;Visits&quot;,
     &quot;Engagement - Call&quot;, &quot;Outreach - Calls and Emails&quot;,
     &quot;Engagement - Email&quot;, &quot;Outreach - Calls and Emails&quot;,
     &quot;Capstone Project&quot;, &quot;Capstone&quot;,
     &quot;Service Agreement&quot;, &quot;Service Agreements&quot;,
     &quot;Joint Patent&quot;, &quot;Joint Patents&quot;,
     &quot;Research Grant&quot;, &quot;Industry Sponsored Research&quot;,
     &quot;&quot;
)</formula>
        <label>Dashboard Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <description>Continuing Education Event Delivery Type</description>
        <inlineHelpText>Continuing Education Event Delivery Type</inlineHelpText>
        <label>Delivery Type</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Blended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moodle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department the contact is associated with for this particular engagement. This information comes from the Center for Research. Filled in by the integration.</description>
        <inlineHelpText>Department the contact is associated with for this particular engagement. This information comes from the Center for Research.</inlineHelpText>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A description of the event</description>
        <inlineHelpText>Provide a description of the event</inlineHelpText>
        <label>Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Agreement/Contract/Award Effective Date</description>
        <inlineHelpText>Enter Agreement/Contract/Award Effective Date</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date/Time</description>
        <inlineHelpText>Enter End Date/Time</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Term__c</fullName>
        <description>Joint Supervisor End Term</description>
        <inlineHelpText>Joint Supervisor End Term</inlineHelpText>
        <label>End Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endowment_Gift_Count_1__c</fullName>
        <description>Endowment Gift Count 1</description>
        <inlineHelpText>Endowment Gift Count 1</inlineHelpText>
        <label>Endowment Gift Count 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endowment_Gift_Count_2__c</fullName>
        <description>Endowment Gift Count 2</description>
        <inlineHelpText>Endowment Gift Count 2</inlineHelpText>
        <label>Endowment Gift Count 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endowment_Gift_Count_3__c</fullName>
        <description>Endowment Gift Count 3</description>
        <inlineHelpText>Endowment Gift Count 3</inlineHelpText>
        <label>Endowment Gift Count 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endowment_Gift_Last_1__c</fullName>
        <description>Date of most recent gift to affinity</description>
        <inlineHelpText>Date of most recent gift.</inlineHelpText>
        <label>Endowment Gift Last 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endowment_Gift_Last_2__c</fullName>
        <description>Date of most recent gift to affinity</description>
        <inlineHelpText>Date of most recent gift to affinity</inlineHelpText>
        <label>Endowment Gift Last 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endowment_Gift_Last_3__c</fullName>
        <description>Date of most recent gift to affinity</description>
        <inlineHelpText>Date of most recent gift to affinity</inlineHelpText>
        <label>Endowment Gift Last 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endowment_Gift_Level_1__c</fullName>
        <description>Endowment Gift Level 1</description>
        <inlineHelpText>Range describing total legal gifts to affinity (KU Division/Department) from this company.</inlineHelpText>
        <label>Endowment Gift Level 1</label>
        <picklist>
            <controllingField>Interaction_Type__c</controllingField>
            <picklistValues>
                <fullName>1) Under $25K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2) $25K - $99K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3) $100K - $999K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4) $1 Million +</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Endowment_Gift_Level_2__c</fullName>
        <description>Endowment Gift Level 2</description>
        <inlineHelpText>Range describing total legal gifts to this company.</inlineHelpText>
        <label>Endowment Gift Level 2</label>
        <picklist>
            <controllingField>Interaction_Type__c</controllingField>
            <picklistValues>
                <fullName>1) Under $25K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2) $25K - $99K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3) $100K - $999K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4) $1 Million +</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Endowment_Gift_Level_3__c</fullName>
        <description>Endowment Gift Level 3</description>
        <inlineHelpText>Range describing total legal gifts to this company.</inlineHelpText>
        <label>Endowment Gift Level 3</label>
        <picklist>
            <controllingField>Interaction_Type__c</controllingField>
            <picklistValues>
                <fullName>1) Under $25K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2) $25K - $99K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3) $100K - $999K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4) $1 Million +</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Endowment_Int_1__c</fullName>
        <description>Endowment Int 1</description>
        <inlineHelpText>KU Department where endowment was gifted.</inlineHelpText>
        <label>Endowment Int 1</label>
        <picklist>
            <controllingField>Interaction_Type__c</controllingField>
            <picklistValues>
                <fullName>Alumni Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College of Liberal Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dole Institute of Politics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edwards Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hall Center for Humanities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Professions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inst for Advancing Med Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institute for Life Span Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journalism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KU Cancer Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Libraries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lied Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Museum of Natural History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Affinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salina Campus (Med)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scholarships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Welfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spencer Museum of Art</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Endowment_Int_2__c</fullName>
        <description>Endowment Int 2</description>
        <inlineHelpText>KU Department where endowment was gifted.</inlineHelpText>
        <label>Endowment Int 2</label>
        <picklist>
            <controllingField>Interaction_Type__c</controllingField>
            <picklistValues>
                <fullName>Alumni Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College of Liberal Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dole Institute of Politics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edwards Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hall Center for Humanities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Professions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inst for Advancing Med Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institute for Life Span Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journalism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KU Cancer Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Libraries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lied Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Museum of Natural History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Affinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salina Campus (Med)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scholarships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Welfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spencer Museum of Art</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Endowment_Int_3__c</fullName>
        <description>Endowment Int 3</description>
        <inlineHelpText>KU Department where endowment was gifted.</inlineHelpText>
        <label>Endowment Int 3</label>
        <picklist>
            <controllingField>Interaction_Type__c</controllingField>
            <picklistValues>
                <fullName>Alumni Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College of Liberal Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dole Institute of Politics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edwards Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hall Center for Humanities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Professions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inst for Advancing Med Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institute for Life Span Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journalism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KU Cancer Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Libraries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lied Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Museum of Natural History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Affinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salina Campus (Med)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scholarships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Welfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spencer Museum of Art</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Endowment_Last_Contact_Date__c</fullName>
        <description>Date of most recent contact report</description>
        <inlineHelpText>Date of most recent contact report.</inlineHelpText>
        <label>Endowment Last Contact Date</label>
        <type>Date</type>
    </fields>
</CustomObject>